# era5grib

./: .gitattributes  .gitignore  MANIFEST.in  README.md  era5grib.py  gen_catalogue.py  meta.yaml  pyproject.toml  setup.cfg  setup.py
config/: global.yaml  um_era5.yaml  um_era5land.yaml  wrf_era5.yaml  wrf_era5land.yaml
era5grib/: __init__.py  _version.py  catalogue.csv  clex.py  command_line.py  config.py  domain.py  era5grib.py  logging.py  main.py  nci.py  parallel.py  regrid_weights.nc
era5grib/config/: defaults.yaml  global.yaml  um_era5.yaml  um_era5land.yaml  wrf_era5.yaml  wrf_era5land.yaml
era5grib/conftree/: __init__.py
era5grib/data_handling/: data_combine.py  data_read.py  era5field.py  grib_metadata.py  xarray_legacy_read.py
era5grib/output_drivers/: grib.py  netcdf.py
test/: custom.yaml  geo_em.d01.nc  multi-time.wps  single-time.wps  test_nci.py  test_wrf.py
